[gd_scene load_steps=2 format=3 uid="uid://c7d8e9f0g1h2"]

[ext_resource type="Script" path="res://scripts/ui/leaderboard.gd" id="1_leaderboard"]

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_leaderboard")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="LeaderboardContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="LeaderboardContainer"]
layout_mode = 2
text = "LEADERBOARD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointsInfoLabel" type="Label" parent="LeaderboardContainer"]
layout_mode = 2
text = "Leaderboard ranks are based on Player Points (damage dealt)"
horizontal_alignment = 1
modulate = Color(0.8, 0.9, 1, 0.7)

[node name="Spacer1" type="Control" parent="LeaderboardContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="LoadingLabel" type="Label" parent="LeaderboardContainer"]
layout_mode = 2
text = "Loading leaderboard..."
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="LeaderboardContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScoresList" type="VBoxContainer" parent="LeaderboardContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer2" type="Control" parent="LeaderboardContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="LeaderboardContainer"]
layout_mode = 2

[node name="RefreshButton" type="Button" parent="LeaderboardContainer/ButtonContainer"]
layout_mode = 2
text = "REFRESH"

[node name="BackButton" type="Button" parent="LeaderboardContainer/ButtonContainer"]
layout_mode = 2
text = "BACK TO MENU"

[connection signal="pressed" from="LeaderboardContainer/ButtonContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="LeaderboardContainer/ButtonContainer/BackButton" to="." method="_on_back_button_pressed"]